--- a/realsense2_camera/package.xml
+++ b/realsense2_camera/package.xml
@@ -27,6 +27,7 @@
   <depend>ddynamic_reconfigure</depend>
   <depend>diagnostic_updater</depend>
   <depend>librealsense2</depend>
+  <depend>rospack</depend>
   <export>
     <nodelet plugin="${prefix}/nodelet_plugins.xml" />
   </export>
