--- a/realsense2_framos_camera/CMakeLists.txt
+++ b/realsense2_framos_camera/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(realsense2_camera)
+project(realsense2_framos_camera)
 add_compile_options(-std=c++11)
 
 option(BUILD_WITH_OPENMP "Use OpenMP" OFF)
@@ -35,8 +35,8 @@ if(SET_USER_BREAK_AT_STARTUP)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBPDEBUG")
 endif()
 
-find_package(realsense2 2.29.0)
-if(NOT realsense2_FOUND)
+find_package(realsense2-framos 2.29.0)
+if(NOT realsense2-framos_FOUND)
     message(FATAL_ERROR "\n\n Intel RealSense SDK 2.0 is missing, please install it from https://github.com/IntelRealSense/librealsense/releases\n\n")
 endif()
 
