--- a/realsense2_framos_description/package.xml
+++ b/realsense2_framos_description/package.xml
@@ -3,8 +3,7 @@
   <name>realsense2_framos_description</name>
   <version>3.0.0</version>
   <description>RealSense Camera description package for Intel 3D D400 cameras</description>
-  <maintainer email="sergey.dorodnicov@intel.com">Sergey Dorodnicov</maintainer>
-  <maintainer email="doron.hirshberg@intel.com">Doron Hirshberg</maintainer>
+  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
   <license>Apache 2.0</license>
 
   <url type="website">http://www.ros.org/wiki/RealSense</url>
